--- a/app/src/main/res/layout/activity_inventory_manage.xml
+++ b/app/src/main/res/layout/activity_inventory_manage.xml
@@ -33,6 +33,7 @@
         android:textSize="16sp" />
 
     <EditText
+        android:id="@+id/et_search"
         android:layout_width="match_parent"
         android:layout_height="38dp"
         android:layout_marginLeft="20dp"
