--- a/app/src/main/res/layout/fragment_layout_search_result.xml
+++ b/app/src/main/res/layout/fragment_layout_search_result.xml
@@ -48,7 +48,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="已上架" />
+                android:text="车辆状态" />
 
             <ImageView
                 android:layout_width="10dp"
@@ -144,6 +144,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rl_search_result"
         android:layout_width="match_parent"
+        android:background="#F5F5F5"
         app:layout_constraintTop_toBottomOf="@id/ll_tab"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_height="0dp"/>
