--- a/app/src/main/res/layout/ac_start.xml
+++ b/app/src/main/res/layout/ac_start.xml
@@ -2,7 +2,8 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@mipmap/home_bg">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -10,12 +11,14 @@
         android:layout_weight="1">
         <Button
             android:id="@+id/btn_options_traders"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="80dp"
             android:text="车源商入口"
             android:textSize="16sp"
-            android:padding="12dp"
+            android:padding="20dp"
             android:layout_centerInParent="true"
+            android:background="@drawable/bg_start"
+            android:textColor="#FFFFFF"
             />
     </RelativeLayout>
 
@@ -25,12 +28,14 @@
         android:layout_weight="1">
         <Button
             android:id="@+id/btn_dealers_traders"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="80dp"
             android:text="经销商入口"
             android:textSize="16sp"
-            android:padding="12dp"
+            android:padding="20dp"
             android:layout_centerInParent="true"
+            android:background="@drawable/bg_start"
+            android:textColor="#FFFFFF"
             />
     </RelativeLayout>
 
@@ -41,12 +46,14 @@
         android:layout_weight="1">
         <Button
             android:id="@+id/btn_sales_traders"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="80dp"
             android:text="销售入口"
             android:textSize="16sp"
-            android:padding="12dp"
+            android:padding="20dp"
             android:layout_centerInParent="true"
+            android:background="@drawable/bg_start"
+            android:textColor="#FFFFFF"
             />
     </RelativeLayout>
 
@@ -57,12 +64,14 @@
         android:layout_weight="1">
         <Button
             android:id="@+id/btn_share"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="80dp"
             android:text="分享链接-多车"
             android:textSize="16sp"
-            android:padding="12dp"
+            android:padding="20dp"
             android:layout_centerInParent="true"
+            android:background="@drawable/bg_start"
+            android:textColor="#FFFFFF"
             />
     </RelativeLayout>
 
