--- a/app/src/main/res/layout/activity_car_detail.xml
+++ b/app/src/main/res/layout/activity_car_detail.xml
@@ -204,6 +204,13 @@
 
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#F5F5F5"
+                android:layout_marginLeft="14dp"
+                android:layout_marginRight="14dp"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
@@ -228,6 +235,14 @@
                     android:textSize="13dp" />
 
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#F5F5F5"
+                android:layout_marginLeft="14dp"
+                android:layout_marginRight="14dp"/>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -254,6 +269,13 @@
 
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#F5F5F5"
+                android:layout_marginLeft="14dp"
+                android:layout_marginRight="14dp"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
@@ -278,6 +300,14 @@
                     android:textSize="13dp" />
 
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#F5F5F5"
+                android:layout_marginLeft="14dp"
+                android:layout_marginRight="14dp"/>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -305,6 +335,13 @@
 
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#F5F5F5"
+                android:layout_marginLeft="14dp"
+                android:layout_marginRight="14dp"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
@@ -329,6 +366,13 @@
                     android:textSize="13dp" />
 
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#F5F5F5"
+                android:layout_marginLeft="14dp"
+                android:layout_marginRight="14dp"/>
 
 
             <LinearLayout
@@ -356,6 +400,13 @@
 
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#F5F5F5"
+                android:layout_marginLeft="14dp"
+                android:layout_marginRight="14dp"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
@@ -378,6 +429,13 @@
                     android:text="2017年"
                     android:textColor="#333333"
                     android:textSize="13dp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#F5F5F5"
+                    android:layout_marginLeft="14dp"
+                    android:layout_marginRight="14dp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -403,6 +461,14 @@
                         android:textSize="13dp" />
 
                 </LinearLayout>
+
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#F5F5F5"
+                    android:layout_marginLeft="14dp"
+                    android:layout_marginRight="14dp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
