--- a/app/src/main/res/layout/activity_maintab.xml
+++ b/app/src/main/res/layout/activity_maintab.xml
@@ -16,8 +16,8 @@
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:layout_alignParentBottom="true"
-        android:background="@mipmap/dikuang"
-        tl:tl_textSelectColor="@color/color_1974FE"
+        android:background="@mipmap/home_bg"
+        tl:tl_textSelectColor="@color/color_FF5754"
         tl:tl_textUnselectColor="@color/color_C5C5C5"
         tl:tl_underline_height="0dp" />
 
