--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
 
     <color name="color_1974FE">#1974FE</color>
     <color name="color_C5C5C5">#C5C5C5</color>
+    <color name="color_FF5754">#FF5754</color>
+    <color name="color_333333">#333333</color>
 </resources>
