库存管理 详情

--- a/app/src/main/res/layout/activity_car_detail.xml
+++ b/app/src/main/res/layout/activity_car_detail.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/rl_title"
         android:layout_width="match_parent"
         android:layout_height="50dp">
 
@@ -26,11 +27,21 @@
             android:textColor="#333333"
             android:textSize="16sp" />
 
+        <ImageView
+            android:id="@+id/iv_more"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="16dp"
+            android:src="@mipmap/top_more" />
+
     </RelativeLayout>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/rl_title">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -501,5 +512,47 @@
 
     </ScrollView>
 
+    <LinearLayout
+        android:id="@+id/lly_share"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:background="@mipmap/dikuang">
 
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_marginTop="13dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="32dp"
+                android:src="@mipmap/icon_phone"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="电话咨询"
+                android:textSize="11sp"
+                android:layout_marginLeft="18dp"
+                android:layout_marginRight="11dp"
+               />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_release_options"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_marginRight="14dp"
+            android:text="分享车辆"
+            android:background="@mipmap/home_bg"
+            android:textColor="#FFFFFF"/>
+    </LinearLayout>
+
+
+</RelativeLayout>
