--- a/app/src/main/res/layout/fragment_layout_search_result.xml
+++ b/app/src/main/res/layout/fragment_layout_search_result.xml
@@ -1,61 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#FFFFFF"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
 
-    <!--<EditText-->
-        <!--android:id="@+id/et_search"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="38dp"-->
-        <!--android:layout_marginBottom="8dp"-->
-        <!--android:layout_marginLeft="46dp"-->
-        <!--android:layout_marginRight="14dp"-->
-        <!--android:layout_marginTop="8dp"-->
-        <!--android:background="#F2F2F2"-->
-        <!--android:drawableLeft="@mipmap/search"-->
-        <!--android:paddingLeft="20dp"-->
-        <!--android:text="车牌型号/VIN号/车辆编号"-->
-        <!--android:textColor="#999999"-->
-        <!--android:textSize="14dp"-->
-        <!--app:layout_constraintTop_toTopOf="parent" />-->
-
-    <!--<ImageView-->
-        <!--android:layout_width="18dp"-->
-        <!--android:layout_height="18dp"-->
-        <!--android:layout_marginLeft="14dp"-->
-        <!--android:layout_marginTop="16dp"-->
-        <!--android:src="@mipmap/back"-->
-        <!--app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--app:layout_constraintTop_toTopOf="parent" />-->
-
-    <LinearLayout
+    <RadioGroup
         android:id="@+id/ll_tab"
         android:layout_width="match_parent"
         android:layout_height="34dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent">
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:id="@+id/ll_car_state"
+        <com.example.com.careasysell.view.DrawableCenterRadioButton
+            android:id="@+id/rb_car_state"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="103"
+            android:button="@null"
+            android:drawableRight="@drawable/drawable_left_radio_selector"
             android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="车辆状态" />
-
-            <ImageView
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:layout_marginLeft="5dp"
-                android:src="@mipmap/dropup" />
-        </LinearLayout>
+            android:text="车辆状态"
+            android:textColor="#333333" />
 
         <View
             android:layout_width="1dp"
@@ -64,25 +29,16 @@
             android:layout_marginTop="10dp"
             android:background="#E6E6E6" />
 
-        <LinearLayout
-            android:id="@+id/ll_car_brand"
+        <com.example.com.careasysell.view.DrawableCenterRadioButton
+            android:id="@+id/rb_car_brand"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="103"
+            android:button="@null"
+            android:drawableRight="@drawable/drawable_left_radio_selector"
             android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="品牌" />
-
-            <ImageView
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:layout_marginLeft="5dp"
-                android:src="@mipmap/dropup" />
-        </LinearLayout>
+            android:text="品牌"
+            android:textColor="#333333" />
 
         <View
             android:layout_width="1dp"
@@ -91,25 +47,16 @@
             android:layout_marginTop="10dp"
             android:background="#E6E6E6" />
 
-        <LinearLayout
-            android:id="@+id/ll_car_order"
+        <com.example.com.careasysell.view.DrawableCenterRadioButton
+            android:id="@+id/rb_car_order"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="103"
+            android:button="@null"
+            android:drawableRight="@drawable/drawable_left_radio_selector"
             android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="默认排序" />
-
-            <ImageView
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:layout_marginLeft="5dp"
-                android:src="@mipmap/dropup" />
-        </LinearLayout>
+            android:text="默认排序"
+            android:textColor="#333333" />
 
         <View
             android:layout_width="1dp"
@@ -118,36 +65,24 @@
             android:layout_marginTop="10dp"
             android:background="#E6E6E6" />
 
-        <LinearLayout
-            android:id="@+id/ll_car_filtreat"
+        <com.example.com.careasysell.view.DrawableCenterRadioButton
+            android:id="@+id/rb_car_filter"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="63"
+            android:layout_weight="103"
+            android:button="@null"
+            android:drawableRight="@drawable/drawable_left_radio_selector"
             android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="筛选" />
-
-            <ImageView
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:layout_marginLeft="5dp"
-                android:src="@mipmap/dropup" />
-        </LinearLayout>
+            android:text="筛选"
+            android:textColor="#333333" />
 
 
-    </LinearLayout>
+    </RadioGroup>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rl_search_result"
         android:layout_width="match_parent"
-        android:background="#F5F5F5"
-        app:layout_constraintTop_toBottomOf="@id/ll_tab"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_height="0dp"/>
+        android:layout_height="match_parent"
+        android:background="#F5F5F5" />
 
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
