--- a/app/src/main/res/layout/fragment_option_traders.xml
+++ b/app/src/main/res/layout/fragment_option_traders.xml
@@ -1,86 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="228dp"
-        android:background="@mipmap/home_bg"
-        android:orientation="vertical">
+        android:scaleType="fitXY"
+        android:src="@mipmap/home_bg" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:text="山东易购汽车销售服务公司"
-            android:textColor="#FFFFFF"
-            android:textSize="18sp" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:text="山东易购汽车销售服务公司"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="6dp"
-            android:text="认证车源商"
-            android:textColor="#FFFFFF"
-            android:textSize="12sp" />
+    <TextView
+        android:id="@+id/subhead_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="52dp"
+        android:text="认证车源商"
+        android:textColor="#FFFFFF"
+        android:textSize="12sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="38dp"
-            android:layout_margin="20dp"
-            android:background="@drawable/bg_edittext"
-            android:drawableLeft="@mipmap/search"
-            android:paddingLeft="20dp"
-            android:text="车牌型号/VIN号/车辆编号"
-            android:textSize="14dp" />
-
-    </LinearLayout>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="38dp"
+        android:layout_margin="20dp"
+        android:layout_marginTop="64dp"
+        android:background="@drawable/bg_edittext"
+        android:drawableLeft="@mipmap/search"
+        android:paddingLeft="20dp"
+        android:text="车牌型号/VIN号/车辆编号"
+        android:textSize="14dp"
+        app:layout_constraintTop_toBottomOf="@+id/subhead_title" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="438dp"
-        android:layout_marginBottom="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="150dp"
         android:background="@drawable/shape_round_react"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="horizontal">
-
             <RelativeLayout
                 android:id="@+id/rl_kucun_manager"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
-                
+
                 <ImageView
-                    android:id="@+id/iv_kucun"
+                    android:id="@+id/iv_store"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:src="@mipmap/home_cars"
                     android:layout_centerInParent="true"
-                    />
+                    android:src="@mipmap/home_cars" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="库存管理"
-                    android:layout_below="@+id/iv_kucun"
+                    android:layout_below="@+id/iv_store"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="12dp"
-                    android:textSize="14dp"/>
-                
+                    android:text="库存管理"
+                    android:textSize="14dp" />
+
             </RelativeLayout>
 
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="40dp"
+                android:background="#F5F5F5" />
 
             <RelativeLayout
                 android:id="@+id/rl_car_redu"
@@ -89,24 +98,31 @@
                 android:layout_weight="1">
 
                 <ImageView
-                    android:id="@+id/iv_redu"
+                    android:id="@+id/iv_car_redu"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:src="@mipmap/home_report"
                     android:layout_centerInParent="true"
-                    />
+                    android:src="@mipmap/home_report" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="车辆热度"
-                    android:layout_below="@+id/iv_redu"
+                    android:layout_below="@+id/iv_car_redu"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="12dp"
-                    android:textSize="14dp"/>
+                    android:text="车辆热度"
+                    android:textSize="14dp" />
 
             </RelativeLayout>
+
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="38dp"
+            android:layout_marginRight="37dp"
+            android:background="#F5F5F5" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -121,32 +137,45 @@
                 android:layout_weight="1">
 
                 <ImageView
-                    android:id="@+id/iv_fabu"
+                    android:id="@+id/iv_release_option"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:src="@mipmap/home_new"
                     android:layout_centerInParent="true"
-                    />
+                    android:src="@mipmap/home_new" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="发布车源"
-                    android:layout_below="@+id/iv_fabu"
+                    android:layout_below="@+id/iv_release_option"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="12dp"
-                    android:textSize="14dp"/>
+                    android:text="发布车源"
+                    android:textSize="14dp" />
 
             </RelativeLayout>
 
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="#F5F5F5" />
+
             <RelativeLayout
+                android:id="@+id/rl_report"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
 
+
             </RelativeLayout>
 
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="38dp"
+            android:layout_marginRight="37dp"
+            android:background="#F5F5F5" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -159,12 +188,20 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1">
 
+
             </RelativeLayout>
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="40dp"
+                android:background="#F5F5F5" />
 
             <RelativeLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
+
 
             </RelativeLayout>
 
@@ -172,4 +209,4 @@
     </LinearLayout>
 
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
