--- a/app/src/main/res/layout/view_dialogpager_img.xml
+++ b/app/src/main/res/layout/view_dialogpager_img.xml
@@ -37,7 +37,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/tv_img_current_index"
@@ -79,4 +80,15 @@
             android:textColor="#fff"
             />
     </FrameLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_details_top_dot"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:layout_marginBottom="5dp"
+        >
+    </LinearLayout>
 </RelativeLayout>
