--- a/app/src/main/res/layout/activity_put_away_detail.xml
+++ b/app/src/main/res/layout/activity_put_away_detail.xml
@@ -40,6 +40,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/layout_bar"
         android:background="#F5F5F5" />
 
     <ScrollView
