--- a/app/src/main/res/layout/activity_shared.xml
+++ b/app/src/main/res/layout/activity_shared.xml
@@ -10,6 +10,7 @@
         android:background="#FFFFFF">
 
         <ImageView
+            android:id="@+id/iv_back"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_centerVertical="true"
