--- a/app/src/main/res/layout/fragment_layout_national_source.xml
+++ b/app/src/main/res/layout/fragment_layout_national_source.xml
@@ -67,18 +67,18 @@
 
         <TextView
             android:id="@+id/tv_put_away_car"
-            android:layout_weight="76"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="6dp"
-            android:layout_marginLeft="6dp"
             android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="76"
+            android:background="@mipmap/home_bg"
+            android:gravity="center"
             android:text="上架车辆"
             android:textColor="#FFFFFF"
-            android:gravity="center"
-            android:textSize="12sp"
-            android:background="@mipmap/home_bg"
-            android:layout_height="match_parent" />
+            android:textSize="12sp" />
 
 
     </RadioGroup>
@@ -86,7 +86,29 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rl_search_result"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="#F5F5F5" />
+
+    <LinearLayout
+        android:id="@+id/ll_put_away"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="#FFFFFF"
+        android:paddingBottom="10dp"
+        android:paddingLeft="14dp"
+        android:paddingRight="14dp"
+        android:paddingTop="10dp"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/tv_put_away"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@mipmap/home_bg"
+            android:gravity="center"
+            android:text="上架选中车辆"
+            android:textColor="#FFFFFF" />
+    </LinearLayout>
 
 </LinearLayout>
