--- a/app/src/main/res/layout/activity_all_source_search.xml
+++ b/app/src/main/res/layout/activity_all_source_search.xml
@@ -68,6 +68,14 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tab_search_result" />
 
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_search_history"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="#F5F5F5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tab_search_result" />
     </android.support.constraint.ConstraintLayout>
 
     <LinearLayout
