--- a/app/src/main/res/layout/activity_release_options.xml
+++ b/app/src/main/res/layout/activity_release_options.xml
@@ -580,18 +580,20 @@
                     android:textSize="14dp"/>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/lly_local_image"
+                    android:layout_width="108dp"
+                    android:layout_height="80dp"
                     android:orientation="vertical"
                     android:background="@drawable/bg_edittext"
                     android:layout_marginLeft="16dp"
                     android:layout_marginTop="20dp">
 
                 <ImageView
+                    android:id="@+id/iv_local"
                     android:layout_width="108dp"
                     android:layout_height="80dp"
                     android:src="@mipmap/add_photo"
-                    android:padding="14dp"
+                    android:scaleType="fitXY"
                     />
 
                 </LinearLayout>
@@ -612,6 +614,7 @@
                     android:hint="输入配置信息"
                     android:padding="14dp"
                     android:gravity="left"
+                    android:textSize="14sp"
                     android:background="@drawable/bg_edittext"/>
 
                 <TextView
@@ -628,6 +631,7 @@
                     android:layout_margin="14dp"
                     android:hint="输入备注"
                     android:padding="14dp"
+                    android:textSize="14sp"
                     android:gravity="left"
                     android:background="@drawable/bg_edittext"/>
 
