--- a/app/src/main/res/layout/fragment_layout_search_result.xml
+++ b/app/src/main/res/layout/fragment_layout_search_result.xml
@@ -76,6 +76,18 @@
             android:text="筛选"
             android:textColor="#333333" />
 
+        <Button
+            android:id="@+id/btn_car_share"
+            android:layout_width="76dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center"
+            android:text="分享车辆"
+            android:textSize="12sp"
+            android:textColor="#FFFFFF"
+            android:background="@mipmap/home_bg"
+            android:layout_marginRight="12dp"
+            android:visibility="gone"/>
+
 
     </RadioGroup>
 
