--- a/app/src/main/res/layout/item_pop.xml
+++ b/app/src/main/res/layout/item_pop.xml
@@ -38,5 +38,24 @@
         android:paddingBottom="8dp"
         android:background="@null"
         />
+    <View
+        android:layout_width="120dp"
+        android:layout_height="0.1dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
+
+    <Button
+        android:id="@+id/btn_yuding"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:text="预定车辆"
+        android:textSize="12sp"
+        android:textColor="#333333"
+        android:paddingLeft="14dp"
+        android:paddingRight="14dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:background="@null"
+        />
 
 </LinearLayout>
