--- a/app/src/main/res/layout/fragment_market_traders.xml
+++ b/app/src/main/res/layout/fragment_market_traders.xml
@@ -35,6 +35,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
+        android:id="@+id/et_search"
         android:layout_width="match_parent"
         android:layout_height="38dp"
         android:layout_margin="20dp"
